--- a/giro-mobile/package.json
+++ b/giro-mobile/package.json
@@ -23,6 +23,7 @@
     "build:android:preview": "eas build --platform android --profile preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@tanstack/react-query": "^5.62.0",
     "class-variance-authority": "^0.7.1",
@@ -40,15 +41,20 @@
     "expo-splash-screen": "~0.29.0",
     "expo-status-bar": "~2.0.0",
     "immer": "^10.1.1",
+    "lucide-react-native": "^0.562.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-hook-form": "^7.70.0",
     "react-native": "0.76.5",
+    "react-native-css-interop": "^0.2.1",
     "react-native-reanimated": "~3.16.0",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-worklets-core": "^1.6.2",
     "react-native-zeroconf": "^0.14.0",
     "tailwind-merge": "^2.6.0",
+    "zod": "^4.3.5",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
@@ -59,6 +65,7 @@
     "@types/react-native": "^0.73.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
+    "eas-cli": "^16.28.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0",
