feat(backend): enable auto-migrations on startup

--- a/giro-license-server/backend/Cargo.toml
+++ b/giro-license-server/backend/Cargo.toml
@@ -32,6 +32,7 @@ sqlx = { version = "0.8", features = [
   "bigdecimal",
   "rust_decimal",
   "ipnetwork",
+  "migrate",
 ] }
 ipnetwork = "0.20"
 
