feat: add stub for react-native-worklets to resolve compatibility issues
- Created a script to generate a stub for `react-native-worklets` in the node_modules directory.
- The stub provides a package.json and forwards plugin and index exports to `react-native-worklets-core`.
- This change addresses the need for compatibility with Reanimated 3.x and RN 0.76.x without installing the native module.

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -4,6 +4,9 @@
   "description": "GIRO - Sistema de Gestao Comercial | Desenvolvido por Arkheion",
   "private": true,
   "type": "module",
+  "pnpm": {
+    "onlyBuiltDependencies": ["esbuild"]
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -42,7 +45,7 @@
     "@tanstack/react-table": "^8.20.5",
     "@tauri-apps/api": "^2.1.1",
     "@tauri-apps/cli": "^2.9.6",
-    "@tauri-apps/plugin-dialog": "^2.0.3",
+    "@tauri-apps/plugin-dialog": "2.4.2",
     "@tauri-apps/plugin-fs": "^2.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
