--- a/giro-license-server/backend/railway.toml
+++ b/giro-license-server/backend/railway.toml
@@ -1,10 +1,10 @@
 [build]
-builder = "dockerfile"
+builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "giro-license-server"
 healthcheckPath = "/api/v1/health"
 healthcheckTimeout = 30
-restartPolicyType = "on_failure"
+restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
+numReplicas = 1
