--- a/giro-license-server/railway.toml
+++ b/giro-license-server/railway.toml
@@ -1,24 +1,10 @@
----
-# Railway.app Service Configuration
-service: giro-license-server
-region: us-west1
+[build]
+builder = "DOCKERFILE"
+dockerfilePath = "backend/Dockerfile"
 
-build:
-  dockerfile: backend/Dockerfile
-target: production
-deploy:
-  numReplicas: 1
-healthcheckPath: /api/v1/health
-healthcheckTimeout: 30
-restartPolicyType: ON_FAILURE
-restartPolicyMaxRetries: 3
-
-networking:
-  port: 3000
-resources:
-  memory: 512
-cpu: 0.5
-# Build configuration
-# Deployment
-# Networking
-# Resources (optional)
+[deploy]
+healthcheckPath = "/api/v1/health"
+healthcheckTimeout = 30
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 3
+numReplicas = 1
