--- a/giro-mobile/package.json
+++ b/giro-mobile/package.json
@@ -20,7 +20,8 @@
     "build:preview": "eas build --platform android --profile preview",
     "build:prod": "eas build --platform android --profile production",
     "build:android": "eas build --platform android",
-    "build:android:preview": "eas build --platform android --profile preview"
+    "build:android:preview": "eas build --platform android --profile preview",
+    "postinstall": "node ./scripts/create-worklets-stub.cjs"
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
@@ -30,13 +31,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~52.0.0",
-    "expo-av": "~14.0.0",
+    "expo-av": "~15.0.2",
     "expo-barcode-scanner": "~13.0.0",
     "expo-camera": "~16.0.0",
     "expo-constants": "~17.0.0",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.0",
-    "expo-network": "~6.0.0",
+    "expo-network": "~7.0.5",
     "expo-router": "~4.0.0",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.0",
@@ -47,7 +48,7 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-hook-form": "^7.70.0",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
     "react-native-css-interop": "^0.2.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
@@ -66,7 +67,6 @@
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.23",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.73.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eas-cli": "^16.28.0",
