--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -47,6 +47,8 @@
     "@tauri-apps/cli": "^2.9.6",
     "@tauri-apps/plugin-dialog": "2.4.2",
     "@tauri-apps/plugin-fs": "^2.0.3",
+    "@tauri-apps/plugin-process": "^2.0.0",
+    "@tauri-apps/plugin-updater": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
