--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -80,7 +80,7 @@ roxmltree = "0.19"
 openssl = { version = "0.10", features = ["vendored"] }
 x509-parser = "0.16"
 qrcode = "0.14"
-image = "0.25"
+image = { version = "0.25", features = ["png", "ico"] }
 regex = "1.10"
 encoding_rs = "0.8"
 sha1 = "0.10"
