fix(build): exclude test files from compilation to unblock release

--- a/apps/desktop/tsconfig.json
+++ b/apps/desktop/tsconfig.json
@@ -48,9 +48,14 @@
       ]
     }
   },
+  "exclude": [
+    "src/**/__tests__/*",
+    "tests",
+    "**/*.test.tsx",
+    "**/*.test.ts"
+  ],
   "include": [
-    "src",
-    "tests"
+    "src"
   ],
   "references": [
     {
