--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,11 +67,11 @@ jobs:
 
       - name: Install dependencies (Desktop)
         working-directory: apps/desktop
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --no-frozen-lockfile
 
       - name: Install dependencies (Database)
         working-directory: packages/database
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --no-frozen-lockfile
 
       - name: Generate Prisma Client
         working-directory: packages/database
