--- a/apps/desktop/.eslintrc.json
+++ b/apps/desktop/.eslintrc.json
@@ -18,6 +18,22 @@
     "react-refresh"
   ],
   "rules": {
-    "react-refresh/only-export-components": "off"
-  }
+    "react-refresh/only-export-components": "off",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "no-case-declarations": "off"
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/__tests__/**",
+        "**/*.test.tsx",
+        "**/*.test.ts"
+      ],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": "off"
+      }
+    }
+  ]
 }
