feat: add vehicle history popover component and associated hook
- Implemented `VehicleHistoryPopover` component to display service history for a vehicle.
- Created `useVehicleHistory` hook to fetch vehicle service history.
- Updated tests for `CashControlPage` to improve async handling and ensure proper rendering.
- Refactored `useServiceOrderDetails` and added new functionality for vehicle history retrieval.
- Enhanced settings store tests and adjusted theme handling for better compatibility.
- Improved license activation tests for better clarity and reliability.

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -17,7 +17,7 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
-    "test:ci": "NODE_OPTIONS=--max-old-space-size=8192 vitest run --threads=false",
+    "test:ci": "NODE_OPTIONS=--max-old-space-size=8192 vitest run --poolOptions.threads.singleThread",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
     "tauri:build": "tauri build"
