--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,15 +1,14 @@
 {
   "name": "@giro/desktop",
-  "version": "1.0.26",
+  "version": "1.0.27",
   "description": "GIRO - Sistema de Gestao Comercial | Desenvolvido por Arkheion",
   "private": true,
   "type": "module",
-
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
+    "lint": "eslint . --report-unused-disable-directives",
     "typecheck": "tsc --noEmit",
     "test": "vitest",
     "test:run": "vitest run --exclude tests/e2e",
@@ -67,8 +66,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-  "axe-core": "^4.8.0",
-  "esbuild": "^0.25.0",
+    "@eslint/js": "^9.39.2",
     "@playwright/test": "^1.57.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -84,13 +82,17 @@
     "@vitest/coverage-v8": "^2.1.9",
     "@vitest/ui": "^2.1.9",
     "autoprefixer": "^10.4.20",
+    "axe-core": "^4.8.0",
+    "esbuild": "^0.25.0",
     "eslint": "^9.14.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^17.0.0",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.53.1",
     "vite": "^5.4.11",
     "vitest": "^2.1.9"
   }
