fix(desktop): eliminate CI hangs by removing buggy a11y test & switching to single-thread Vitest (v1.0.37)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,7 +81,7 @@ jobs:
 
       - name: Unit tests (Desktop)
         working-directory: apps/desktop
-        run: pnpm run test:run
+        run: pnpm run test:ci
 
       - name: Install dependencies (Database)
         working-directory: packages/database
