--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@giro/desktop",
-  "version": "1.0.38",
+  "version": "1.0.39",
   "description": "GIRO - Sistema de Gestao Comercial | Desenvolvido por Arkheion",
   "private": true,
   "type": "module",
@@ -16,7 +16,7 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
-    "test:ci": "NODE_OPTIONS=--max-old-space-size=8192 vitest run --poolOptions.threads.singleThread",
+    "test:ci": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest run --poolOptions.threads.singleThread",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
     "tauri:build": "tauri build"
@@ -83,6 +83,7 @@
     "@vitest/ui": "^2.1.9",
     "autoprefixer": "^10.4.20",
     "axe-core": "^4.8.0",
+    "cross-env": "^10.1.0",
     "esbuild": "^0.25.0",
     "eslint": "^9.14.0",
     "eslint-plugin-react-hooks": "^5.0.0",
