--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@giro/desktop",
-  "version": "1.0.39",
+  "version": "1.0.40",
   "description": "GIRO - Sistema de Gestao Comercial | Desenvolvido por Arkheion",
   "private": true,
   "type": "module",
@@ -16,7 +16,7 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
-    "test:ci": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest run --poolOptions.threads.singleThread",
+    "test:ci": "cross-env NODE_OPTIONS=--max-old-space-size=8192 vitest run --poolOptions.threads.singleThread --bail 1 --reporter=verbose",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
     "tauri:build": "tauri build"
