--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
         run: cargo fmt --check
 
       - name: Test (Vitest)
-        run: pnpm test
+        run: pnpm test:ci
 
       - name: Test (Rust)
         working-directory: apps/desktop/src-tauri
@@ -143,13 +143,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+        uses: dtolnay/rust-toolchain@stable
 
-      - name: Install cargo-audit
-        run: |
-          cargo install cargo-audit --force
+      - name: Install cargo-audit (prebuilt)
+        uses: taiki-e/install-action@v1
+        with:
+          tool: cargo-audit
+          version: latest
 
       - name: Run cargo audit
         working-directory: apps/desktop/src-tauri
