--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,6 @@ docs/.vitepress/cache/
 
 # Sentry
 .sentryclirc
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.agent/rules/snyk_rules.md
