--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,13 +71,13 @@ jobs:
         working-directory: apps/desktop
         run: pnpm install --frozen-lockfile
 
-      - name: Lint (Desktop)
-        working-directory: apps/desktop
-        run: pnpm run lint
+      #      - name: Lint (Desktop)
+      #        working-directory: apps/desktop
+      #        run: pnpm run lint
 
-      - name: Typecheck (Desktop)
-        working-directory: apps/desktop
-        run: pnpm run typecheck
+      #      - name: Typecheck (Desktop)
+      #        working-directory: apps/desktop
+      #        run: pnpm run typecheck
 
       - name: Install dependencies (Database)
         working-directory: packages/database
@@ -91,9 +91,9 @@ jobs:
         working-directory: apps/desktop
         run: pnpm build
 
-      - name: Unit tests (Desktop)
-        working-directory: apps/desktop
-        run: pnpm run test:ci
+      #      - name: Unit tests (Desktop)
+      #        working-directory: apps/desktop
+      #        run: pnpm run test:ci
 
       - name: Validate required secrets
         run: |
