--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,9 @@ jobs:
       - name: Test (Vitest)
         run: pnpm test:ci
 
+      - name: Create empty dist (for Tauri macro)
+        run: mkdir -p dist
+
       - name: Test (Rust)
         working-directory: apps/desktop/src-tauri
         run: cargo test
