--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,9 @@ jobs:
       - name: Install Node dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Pre-build (Create dummy dist for Tauri macro)
+        run: mkdir -p dist && touch dist/index.html
+
       - name: Lint (ESLint)
         run: pnpm lint
 
@@ -76,9 +79,6 @@ jobs:
 
       - name: Test (Vitest)
         run: pnpm test:ci
-
-      - name: Create empty dist (for Tauri macro)
-        run: mkdir -p dist
 
       - name: Test (Rust)
         working-directory: apps/desktop/src-tauri
