fix(release): specify bash shell for secrets validation and bump to 1.0.44

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,6 +96,7 @@ jobs:
       #        run: pnpm run test:ci
 
       - name: Validate required secrets
+        shell: bash
         run: |
           if [ -z "${{ secrets.GH_TOKEN }}" ]; then echo "GH_TOKEN (secret) is missing"; exit 1; fi
           if [ -z "${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}" ]; then echo "TAURI_SIGNING_PRIVATE_KEY (secret) is missing"; exit 1; fi
