chore: release v1.0.49 - implement account sync and windows stability fixes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "giro-monorepo",
   "private": true,
+  "version": "1.0.49",
   "license": "Proprietary",
   "pnpm": {
     "onlyBuiltDependencies": [
