--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -78,6 +78,7 @@ sha2 = "0.10"
 reqwest = { version = "0.12", default-features = false, features = [
   "json",
   "rustls-tls",
+  "rustls-tls-native-roots",
 ] }
 rand = "0.9.2"
 argon2 = "0.4"
