--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "giro-desktop"
-version = "1.1.2"
+version = "1.1.3"
 description = "GIRO - Sistema de Gestao Comercial para Varejo"
 authors = ["Arkheion"]
 license = "Proprietary"
@@ -98,6 +98,18 @@ image = { version = "0.25", features = ["png", "ico"] }
 regex = "1.10"
 encoding_rs = "0.8"
 sha1 = "0.10"
+specta = { version = "=2.0.0-rc.20", features = [
+  "chrono",
+  "serde",
+  "uuid",
+  "rust_decimal",
+  "serde_json",
+] }
+tauri-specta = { version = "=2.0.0-rc.20", features = [
+  "javascript",
+  "typescript",
+] }
+specta-typescript = "=0.0.7"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
