fix: standardize prisma DATABASE_URL and ensure it is provided in CI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,6 +74,8 @@ jobs:
 
       - name: Generate Prisma Client
         working-directory: packages/database
+        env:
+          DATABASE_URL: "file:./mercearias.db"
         run: pnpm prisma generate
 
       - name: Build Frontend
