fix(cd): add missing path for license server workflow

--- a/.github/workflows/license-server-cd.yml
+++ b/.github/workflows/license-server-cd.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
     paths:
       - "giro-license-server/backend/**"
+      - ".github/workflows/license-server-cd.yml"
   workflow_dispatch:
     inputs:
       environment:
