fix(cd): fix health-check working directory

--- a/.github/workflows/license-server-cd.yml
+++ b/.github/workflows/license-server-cd.yml
@@ -128,6 +128,10 @@ jobs:
     needs: [deploy-production]
     if: github.ref == 'refs/heads/main'
 
+    defaults:
+      run:
+        working-directory: .
+
     steps:
       - name: Wait for deployment
         run: sleep 60
