--- a/.github/workflows/license-server-cd.yml
+++ b/.github/workflows/license-server-cd.yml
@@ -75,58 +75,11 @@ jobs:
           cache-to: type=gha,mode=max
           platforms: linux/amd64
 
-  deploy-staging:
-    name: Deploy to Staging
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    if: github.ref == 'refs/heads/develop' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'staging')
-    environment:
-      name: staging
-      url: https://staging-api.giro.com.br
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Deploy to Railway (Staging)
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN_STAGING }}
-        run: |
-          echo "🚀 Deploying to staging environment..."
-          # Railway CLI deployment
-          # npx @railway/cli deploy --service giro-license-server
-
-  deploy-production:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    if: github.ref == 'refs/heads/main' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'production')
-    environment:
-      name: production
-      url: https://giro-license-server-production.up.railway.app
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Deploy to Railway (Production)
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-        run: |
-          echo "🚀 Deploying to production environment..."
-          # Railway CLI deployment
-          # npx @railway/cli deploy --service giro-license-server
-
-      - name: Notify deployment
-        if: success()
-        run: |
-          echo "✅ Deployment successful!"
-          echo "Image: ${{ needs.build-and-push.outputs.image_tag }}"
-          echo "Digest: ${{ needs.build-and-push.outputs.image_digest }}"
-
   health-check:
     name: Health Check
     runs-on: ubuntu-latest
-    needs: [deploy-production]
-    if: github.ref == 'refs/heads/main'
+    needs: [build-and-push]
+    if: github.ref == 'refs/heads/main' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'production')
 
     defaults:
       run:
@@ -134,7 +87,7 @@ jobs:
 
     steps:
       - name: Wait for deployment
-        run: sleep 60
+        run: sleep 180
 
       - name: Check API health
         run: |
