--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "giro-desktop"
-version = "1.3.6"
+version = "1.3.7"
 description = "GIRO - Sistema de Gestao Comercial para Varejo"
 authors = ["Arkheion"]
 license = "Proprietary"
@@ -62,6 +62,7 @@ dotenv = "0.15"
 
 
 # Utilities
+cfg-if = "1.0"
 thiserror = "1.0"
 anyhow = "1.0"
 tracing = "0.1"
