--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mercearias/database",
-  "version": "1.1.3",
-  "description": "Database schema, migrations e types para o sistema Mercearias",
+  "version": "1.4.0",
+  "description": "Database schema, migrations e types para o sistema GIRO",
   "private": true,
   "type": "module",
   "main": "./dist/index.js",
