chore: update e2e tests, docs and config
- Update enterprise e2e tests
- Update STATUS.md roadmap
- Update .env.example
- Update README.md

--- a/apps/desktop/.env.example
+++ b/apps/desktop/.env.example
@@ -1,9 +1,18 @@
 # Example environment variables for GIRO Desktop
 # Copy to .env or set these variables in your system/service manager
+# =============================================================================
+# ⚠️  IMPORTANT: All variables marked REQUIRED must be set in production
+# =============================================================================
 
 # License server configuration
 LICENSE_SERVER_URL=https://giro-license-server-production.up.railway.app
-LICENSE_API_KEY=REPLACE_WITH_PROD_API_KEY
+LICENSE_API_KEY=REPLACE_WITH_PROD_API_KEY  # REQUIRED in production
+
+# Security Keys - REQUIRED in production
+PIN_HMAC_KEY=REPLACE_WITH_STRONG_RANDOM_KEY  # Used for PIN hashing
+
+# Network/Mobile sync secret - must be configured in Settings before use
+# This is stored in the database, not as env var
 
 # JWT secret for mobile/websocket sessions
 JWT_SECRET=REPLACE_WITH_STRONG_RANDOM_SECRET
@@ -13,3 +22,4 @@ JWT_SECRET=REPLACE_WITH_STRONG_RANDOM_SECRET
 
 # Other optional vars
 # LOG_LEVEL=info
+# SENTRY_DSN=https://your-sentry-dsn
