feat(docs): adicionar documentação completa sobre implementação LGPD feat(docs): criar guia de testes para funcionalidades LGPD feat(docs): implementar guia de configuração da chave de criptografia PII

--- a/apps/desktop/.env.example
+++ b/apps/desktop/.env.example
@@ -10,6 +10,7 @@ LICENSE_API_KEY=REPLACE_WITH_PROD_API_KEY  # REQUIRED in production
 
 # Security Keys - REQUIRED in production
 PIN_HMAC_KEY=REPLACE_WITH_STRONG_RANDOM_KEY  # Used for PIN hashing
+GIRO_PII_KEY=REPLACE_WITH_32_BYTE_HEX_KEY     # AES-256-GCM key for PII encryption (CPF/CNPJ)
 
 # Network/Mobile sync secret - must be configured in Settings before use
 # This is stored in the database, not as env var
