--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -75,6 +75,7 @@ dirs = "5.0"
 # Crypto (para backup)
 aes-gcm = "0.10"
 sha2 = "0.10"
+bcrypt = "0.15"
 
 # HTTP client (para Google Drive)
 reqwest = { version = "0.12", default-features = false, features = [
