--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ on:
       - "apps/desktop/**"
       - "packages/**"
       - ".github/workflows/ci.yml"
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
