feat(printer): implementa detecção nativa de impressoras Windows
BREAKING CHANGE: Nova arquitetura de detecção de impressoras

## Backend (Rust)
- Adiciona módulo windows_printer.rs com APIs nativas Windows:
  - EnumPrintersW para listar todas impressoras
  - GetDefaultPrinterW para impressora padrão
  - WritePrinter para impressão RAW direta
- Novos comandos Tauri:
  - list_windows_printers (info detalhada)
  - get_default_printer
  - suggest_best_printer (térmica preferencial)
  - is_printer_ready (status)
  - get_printer_info
- Fallback automático: API Nativa → PowerShell → WMIC
- Detecção de impressoras térmicas por keywords no driver

## Frontend (React)
- Novo hook useWindowsPrinters com:
  - Lista de impressoras com status em tempo real
  - Auto-seleção da impressora sugerida
  - Formatação de status com ícones
- SettingsPage atualizado:
  - Dropdown com indicadores visuais (⭐ padrão, 🧾 térmica)
  - Status da impressora selecionada
  - Botão de refresh para recarregar

## Dependências
- windows crate v0.62 (Win32_Graphics_Printing)
- scopeguard v1.2 (RAII para handles)

Closes: detecção de impressora Windows falhando silenciosamente

--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "giro-desktop"
-version = "2.4.8"
+version = "2.4.9"
 description = "GIRO - Sistema de Gestao Comercial para Varejo"
 authors = ["Arkheion"]
 license = "Proprietary"
@@ -43,6 +43,7 @@ rust_decimal = { version = "1.34", features = ["serde"] }
 
 # Hardware
 serialport = "4.6"
+scopeguard = "1.2"
 
 # WebSocket (para scanner mobile)
 tokio-tungstenite = "0.24"
@@ -117,6 +118,14 @@ calamine = "0.30.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
+
+# Windows-specific dependencies for native printer API
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.62", features = [
+  "Win32_Graphics_Printing",
+  "Win32_Foundation",
+  "Win32_Security",
+] }
 
 [features]
 default = ["custom-protocol"]
