--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -123,9 +123,11 @@ tauri-plugin-updater = "2"
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.62", features = [
   "Win32_Graphics_Printing",
+  "Win32_Graphics_Gdi",
   "Win32_Foundation",
   "Win32_Security",
 ] }
+scopeguard = "1.2"
 
 [features]
 default = ["custom-protocol"]
