--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -126,6 +126,7 @@ windows = { version = "0.62", features = [
   "Win32_Graphics_Gdi",
   "Win32_Foundation",
   "Win32_Security",
+  "Win32_System_Registry",
 ] }
 scopeguard = "1.2"
 
