chore: remove large binary from repo and add to gitignore
- Removed 597MB binary: scripts/simulation/bin/giro-simulated
- Added bin folder and .bundle files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,8 @@ docs/.vitepress/cache/
 
 # Snyk Security Extension - AI Rules (auto-generated)
 .agent/rules/snyk_rules.md
+
+# Binários compilados
+scripts/simulation/bin/
+*.bundle
+
