--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -45,6 +45,16 @@ jobs:
           pnpm --filter @giro/desktop run test:run || true
           pnpm --filter @giro/desktop run typecheck || true
 
+      - name: Generate Prisma Client
+        working-directory: packages/database
+        env:
+          DATABASE_URL: "file:./mercearias.db"
+        run: pnpm prisma generate
+
+      - name: Build Frontend
+        working-directory: apps/desktop
+        run: pnpm build
+
       - name: Run Rust tests
         working-directory: apps/desktop/src-tauri
         run: cargo test
