--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "giro-desktop"
-version = "2.4.27"
+version = "2.5.0"
 description = "GIRO - Sistema de Gestao Comercial para Varejo"
 authors = ["Arkheion"]
 license = "Proprietary"
@@ -128,6 +128,8 @@ windows = { version = "0.62", features = [
   "Win32_Security",
   "Win32_System_Registry",
   "Win32_System",
+  "Win32_Devices",
+  "Win32_Devices_DeviceAndDriverInstallation",
 ] }
 scopeguard = "1.2"
 
