--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -73,10 +73,13 @@ chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.10", features = ["v4", "serde"] }
 dirs = "5.0"
 
-# Crypto (para backup)
+# Crypto (para backup e autenticação)
 aes-gcm = "0.10"
 sha2 = "0.10"
 bcrypt = "0.15"
+argon2 = { version = "0.5", features = ["std"] }
+rand = "0.9.2"
+hmac = "0.12"
 
 # HTTP client (para Google Drive)
 reqwest = { version = "0.12", default-features = false, features = [
@@ -86,9 +89,6 @@ reqwest = { version = "0.12", default-features = false, features = [
   "multipart",
   "stream",
 ] }
-rand = "0.9.2"
-argon2 = "0.4"
-hmac = "0.12"
 local-ip-address = "0.6.8"
 hostname = "0.4"
 
