chore: simplify lint-staged, remove eslint from pre-commit (handled by CI)
- ESLint 8.x incompatible with flat config in apps/desktop
- Each package handles its own linting
- Keep prettier for markdown/json formatting

--- a/package.json
+++ b/package.json
@@ -32,13 +32,8 @@
     "typescript": "~5.4.5"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "git add"
-    ],
     "*.{md,json}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
